--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+      "lib": ["es6", "dom"],
+      "types": ["reflect-metadata"],
+      "experimentalDecorators": true,
+      "emitDecoratorMetadata": true
   }
 }
