--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,8 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start --no-https",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
@@ -13,19 +12,24 @@
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
     "expo": "~42.0.1",
+    "expo-location": "^12.1.2",
+    "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
+    "expo-task-manager": "^9.2.2",
+    "expo-updates": "~0.8.1",
     "inversify": "^5.1.1",
     "inversify-react": "^1.0.0",
     "mobx": "^6.3.2",
     "mobx-react": "^7.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native": "~0.63.4",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
+    "react-native-unimodules": "~0.14.5",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation-stack": "^2.10.4",
@@ -39,5 +43,7 @@
     "@types/react-router-dom": "^5.1.8",
     "typescript": "~4.0.0"
   },
-  "private": true
+  "private": true,
+  "name": "frontend",
+  "version": "1.0.0"
 }
