adding ios app code  testing background location

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -19,7 +19,11 @@
     "ios": {
       "supportsTablet": true,
       "infoPlist": {
-        "NSLocationAlwaysUsageDescription": "testing"
+        "NSLocationAlwaysUsageDescription": "testing",
+        "UIBackgroundModes": [
+          "location",
+          "fetch"
+        ]
       },
       "bundleIdentifier": "patch"
     },
