--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -32,6 +32,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
+    "expo-server-sdk": "^3.6.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "firebase-admin": "^9.2.0",
