--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
     "expo": "~42.0.1",
     "expo-location": "^12.1.2",
+    "expo-notifications": "^0.12.3",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-task-manager": "^9.2.2",
@@ -36,8 +38,7 @@
     "react-navigation-stack": "^2.10.4",
     "react-router-dom": "^5.2.0",
     "reflect-metadata": "^0.1.13",
-    "uuid": "^8.3.2",
-    "@react-native-async-storage/async-storage": "~1.15.0"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
