--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
@@ -37,6 +38,7 @@
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/react-router-dom": "^5.1.8",
+    "jest": "^27.0.6",
     "typescript": "~4.0.0"
   },
   "private": true
