--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
+      "jsx": "react",
       "lib": ["es6", "dom"],
       "types": ["reflect-metadata"],
       "experimentalDecorators": true,
