--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "@types/react-native": "~0.63.2",
     "@types/react-router-dom": "^5.1.8",
     "jest": "^27.0.6",
+    "@types/uuid": "^8.3.1",
     "typescript": "~4.0.0"
   },
   "private": true
