--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,11 +35,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@types/enzyme": "^3.10.9",
+    "@types/jest": "^27.0.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/react-router-dom": "^5.1.8",
-    "jest": "^27.0.6",
     "@types/uuid": "^8.3.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
+    "jest": "^27.0.6",
     "typescript": "~4.0.0"
   },
   "private": true
