--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
       "jsx": "react",
       "lib": ["es6", "dom"],
-      "types": ["reflect-metadata"],
+      "types": ["reflect-metadata", "jest"],
       "experimentalDecorators": true,
       "emitDecoratorMetadata": true
   }
