--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "lib/backend/functions/src/firebase.js",
   "dependencies": {
+    "@tsed/agenda": "^6.62.3",
     "@tsed/ajv": "^6.59.9",
     "@tsed/common": "^6.59.9",
     "@tsed/core": "^6.59.9",
@@ -27,6 +28,7 @@
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.3.3",
+    "agenda": "^4.2.1",
     "ajv": "^8.6.2",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
@@ -40,7 +42,7 @@
     "infra": "file:infra",
     "method-override": "^3.0.0",
     "module-alias": "^2.2.2",
-    "mongoose": "^5.13.3",
+    "mongoose": "^5.13.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "uuid": "^8.3.2"
