--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,12 @@
     "eject": "expo eject",
     "test": "jest"
   },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
+    ]
+  },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.4",
@@ -31,7 +37,9 @@
     "react-native-web": "~0.13.12",
     "react-navigation-stack": "^2.10.4",
     "react-router-dom": "^5.2.0",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -45,6 +53,7 @@
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
     "jest": "^27.0.6",
+    "react-test-renderer": "^17.0.2",
     "typescript": "~4.0.0"
   },
   "private": true
