persistent session store + routing notif responses

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -22,7 +22,8 @@
         "NSLocationAlwaysUsageDescription": "testing",
         "UIBackgroundModes": [
           "location",
-          "fetch"
+          "fetch",
+          "remote-notification"
         ]
       },
       "bundleIdentifier": "patch"
