--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -32,6 +32,7 @@
     "ajv": "^8.6.2",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "connect-mongo": "^4.5.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "expo-server-sdk": "^3.6.0",
