--- a/frontend/ios/patch/Info.plist
+++ b/frontend/ios/patch/Info.plist
@@ -71,6 +71,7 @@
 	<array>
 		<string>location</string>
 		<string>fetch</string>
+		<string>remote-notification</string>
 	</array>
 	<key>CFBundleDisplayName</key>
 	<string>patch</string>
