--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest"
-  },
-  "jest": {
-    "preset": "jest-expo",
-    "transformIgnorePatterns": [
-      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
-    ]
+    "test": "node_modules/jest/bin/jest.js"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
@@ -53,6 +47,7 @@
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
     "jest": "^27.0.6",
+    "jest-expo": "^42.1.0",
     "react-test-renderer": "^17.0.2",
     "typescript": "~4.0.0"
   },
