--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,24 +9,23 @@
     "test": "node_modules/jest/bin/jest.js"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.5",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^5.9.8",
+    "@react-navigation/stack": "^5.14.9",
     "axios": "^0.21.1",
-    "expo": "~42.0.1",
+    "expo": "^42.0.3",
     "expo-status-bar": "~1.0.4",
     "inversify": "^5.1.1",
     "inversify-react": "^1.0.0",
     "mobx": "^6.3.2",
     "mobx-react": "^7.2.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^17.0.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^2.2.0",
-    "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.4.0",
+    "react-native-safe-area-context": "^3.3.0",
+    "react-native-screens": "^3.6.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation-stack": "^2.10.4",
@@ -36,19 +35,21 @@
     "ts-node": "^10.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.15.0",
     "@types/enzyme": "^3.10.9",
-    "@types/jest": "^27.0.0",
+    "@types/jest": "^27.0.1",
     "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
+    "@types/react-native": "^0.63.53",
     "@types/react-router-dom": "^5.1.8",
     "@types/uuid": "^8.3.1",
     "enzyme": "^3.11.0",
+    "enzyme-adapter-react-15": "^1.4.3",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
     "jest": "^27.0.6",
     "jest-expo": "^42.1.0",
-    "react-test-renderer": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-test-renderer": "^15.7.0",
     "typescript": "~4.0.0"
   },
   "private": true
