testing errors fixed, app errors not

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,6 +5,7 @@
       "lib": ["es6", "dom"],
       "types": ["reflect-metadata", "jest"],
       "experimentalDecorators": true,
-      "emitDecoratorMetadata": true
+      "emitDecoratorMetadata": true,
+      "esModuleInterop": true
   }
 }
