token auth, persistent stores, background task testing

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -27,7 +27,7 @@
           "remote-notification"
         ]
       },
-      "bundleIdentifier": "patch"
+      "bundleIdentifier": "ai.raheem.test"
     },
     "android": {
       "adaptiveIcon": {
