--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -37,19 +37,21 @@
     "dotenv": "^10.0.0",
     "expo-server-sdk": "^3.6.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.2",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
     "infra": "file:infra",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "module-alias": "^2.2.2",
     "mongoose": "^5.13.7",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express-session": "^1.17.4",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/passport": "^1.0.7",
     "@types/passport-local": "^1.0.34",
     "@types/uuid": "^8.3.1",
