--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,30 +8,33 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
     "expo": "~42.0.1",
-    "expo-location": "^12.1.2",
-    "expo-notifications": "^0.12.3",
+    "expo-app-loading": "^1.1.2",
+    "expo-device": "^3.3.0",
+    "expo-location": "~12.1.2",
+    "expo-notifications": "~0.12.3",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
-    "expo-task-manager": "^9.2.2",
-    "expo-updates": "~0.8.1",
+    "expo-task-manager": "~9.2.2",
+    "expo-updates": "~0.8.2",
     "inversify": "^5.1.1",
     "inversify-react": "^1.0.0",
     "mobx": "^6.3.2",
+    "mobx-persist-store": "^1.0.3",
     "mobx-react": "^7.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "~0.63.4",
-    "react-native-gesture-handler": "^1.10.3",
-    "react-native-get-random-values": "^1.7.0",
+    "react-native": "0.63.4",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-get-random-values": "~1.7.0",
     "react-native-paper": "^4.9.2",
-    "react-native-reanimated": "^2.2.0",
-    "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.4.0",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
     "react-native-unimodules": "~0.14.5",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
@@ -41,7 +44,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "~7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/react-router-dom": "^5.1.8",
