persisntent stores + front/back api type bindings + org apis

--- a/backend/functions/tsconfig.json
+++ b/backend/functions/tsconfig.json
@@ -18,7 +18,8 @@
     ],
     "esModuleInterop": true,
     "paths": {
-      "common/*": ["../../common/*"]
+      "common/*": ["../../common/*"],
+      "common": ["../../common/index.ts"]
     }
   },
   "compileOnSave": true,
