--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "lib/backend/functions/src/firebase.js",
   "dependencies": {
+    "@mapbox/timespace": "^2.0.4",
     "@tsed/agenda": "^6.62.3",
     "@tsed/ajv": "^6.59.9",
     "@tsed/common": "^6.59.9",
@@ -47,6 +48,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "randomcolor": "^0.6.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
