--- a/frontend/app.json
+++ b/frontend/app.json
@@ -3,7 +3,7 @@
     "name": "patch",
     "slug": "patch",
     "owner": "raheem-ai",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -27,7 +27,10 @@
           "remote-notification"
         ]
       },
-      "bundleIdentifier": "ai.raheem.test"
+      "bundleIdentifier": "ai.raheem.test",
+      "config": {
+        "googleMapsApiKey": "AIzaSyDVdpoHZzD9G5EdsNDEg6CG3hnE4q4zbhw"
+      }
     },
     "android": {
       "adaptiveIcon": {
