--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "3.1.16",
+    "@googlemaps/js-api-loader": "^1.12.3",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "assert": "^2.0.0",
     "axios": "^0.21.1",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "events": "^3.3.0",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-device": "^3.3.0",
@@ -23,35 +29,50 @@
     "expo-updates": "~0.8.2",
     "inversify": "^5.1.1",
     "inversify-react": "^1.0.0",
+    "lodash": "^4.17.21",
     "mobx": "^6.3.2",
     "mobx-persist-store": "^1.0.3",
     "mobx-react": "^7.2.0",
+    "module-alias": "^2.2.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-get-random-values": "~1.7.0",
+    "react-native-maps": "0.28.0",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-svg": "12.1.1",
     "react-native-unimodules": "~0.14.5",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation-stack": "^2.10.4",
     "react-router-dom": "^5.2.0",
     "reflect-metadata": "^0.1.13",
+    "stream-browserify": "^3.0.0",
+    "url": "^0.11.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@types/google.maps": "^3.45.6",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/react-router-dom": "^5.1.8",
     "@types/uuid": "^8.3.1",
-    "typescript": "~4.0.0"
+    "babel-plugin-module-resolver": "^4.1.0",
+    "typescript": "~4.0.0",
+    "@expo/ngrok": "^2.5.0"
   },
   "private": true,
   "name": "frontend",
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "_moduleAliases": {
+    "crypto": "crypto-browserify"
+  },
+  "react-native": {
+    "stream": "stream-browserify"
+  }
 }
