--- a/frontend/app.json
+++ b/frontend/app.json
@@ -27,7 +27,7 @@
           "remote-notification"
         ]
       },
-      "bundleIdentifier": "ai.raheem.test",
+      "bundleIdentifier": "ai.raheem.patch",
       "config": {
         "googleMapsApiKey": "AIzaSyDVdpoHZzD9G5EdsNDEg6CG3hnE4q4zbhw"
       }
