--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,7 +53,8 @@
     "reflect-metadata": "^0.1.13",
     "stream-browserify": "^3.0.0",
     "url": "^0.11.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "expo-secure-store": "~10.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
