--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "events": "^3.3.0",
     "expo": "^43.0.0",
     "expo-app-loading": "~1.2.1",
+    "expo-constants": "~12.1.3",
     "expo-device": "~4.0.3",
     "expo-location": "~13.0.4",
     "expo-notifications": "~0.13.3",
@@ -37,10 +38,12 @@
     "react-native": "0.64.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-get-random-values": "~1.7.0",
+    "react-native-maps": "0.28.0",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-scroll-into-view": "^2.0.2",
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "0.17.1",
@@ -48,9 +51,7 @@
     "reflect-metadata": "^0.1.13",
     "stream-browserify": "^3.0.0",
     "url": "^0.11.0",
-    "uuid": "^8.3.2",
-    "expo-constants": "~12.1.3",
-    "react-native-maps": "0.28.0"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
