--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,7 @@
     "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
     "expo-task-manager": "~10.0.3",
-    "expo-updates": "~0.10.12",
+    "expo-updates": "~0.10.15",
     "inversify": "^5.1.1",
     "inversify-react": "^1.0.0",
     "lodash": "^4.17.21",
@@ -33,12 +33,13 @@
     "mobx-persist-store": "^1.0.3",
     "mobx-react": "^7.2.0",
     "module-alias": "^2.2.2",
+    "parse-full-name": "^1.2.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-get-random-values": "~1.7.0",
-    "react-native-maps": "0.28.0",
+    "react-native-maps": "0.28.1",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
