--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,18 +52,19 @@
     "reflect-metadata": "^0.1.13",
     "stream-browserify": "^3.0.0",
     "url": "^0.11.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "expo-linking": "~2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@expo/ngrok": "^2.5.0",
     "@types/google.maps": "^3.45.6",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
+    "@types/react-native": "^0.64.19",
     "@types/react-router-dom": "^5.1.8",
     "@types/uuid": "^8.3.1",
     "babel-plugin-module-resolver": "^4.1.0",
-    "typescript": "~4.3.5",
-    "@expo/ngrok": "^2.5.0"
+    "typescript": "~4.3.5"
   },
   "private": true,
   "name": "frontend",
