--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -26,6 +26,7 @@
     "@tsed/passport": "^6.59.9",
     "@tsed/platform-express": "^6.59.9",
     "@tsed/schema": "^6.59.9",
+    "@tsed/socketio": "^6.59.9",
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.3.3",
@@ -49,6 +50,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "randomcolor": "^0.6.2",
+    "socket.io": "^4.4.0",
     "twilio": "^3.71.3",
     "uuid": "^8.3.2"
   },
