--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "expo-app-loading": "~1.2.1",
     "expo-constants": "~12.1.3",
     "expo-device": "~4.0.3",
+    "expo-linking": "~2.4.2",
     "expo-location": "~13.0.4",
     "expo-notifications": "~0.13.3",
     "expo-secure-store": "~11.0.3",
@@ -50,10 +51,10 @@
     "react-native-web": "0.17.1",
     "react-router-dom": "^5.2.0",
     "reflect-metadata": "^0.1.13",
+    "socket.io-client": "^4.4.0",
     "stream-browserify": "^3.0.0",
     "url": "^0.11.0",
-    "uuid": "^8.3.2",
-    "expo-linking": "~2.4.2"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
