--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -15,6 +15,7 @@
   "main": "lib/backend/functions/src/firebase.js",
   "dependencies": {
     "@mapbox/timespace": "^2.0.4",
+    "@socket.io/redis-adapter": "^7.1.0",
     "@tsed/agenda": "^6.62.3",
     "@tsed/ajv": "^6.59.9",
     "@tsed/common": "^6.59.9",
@@ -50,6 +51,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "randomcolor": "^0.6.2",
+    "redis": "^4.0.1",
     "socket.io": "^4.4.0",
     "twilio": "^3.71.3",
     "uuid": "^8.3.2"
