--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "lib/backend/functions/src/firebase.js",
   "dependencies": {
+    "@google-cloud/pubsub": "^2.18.4",
     "@mapbox/timespace": "^2.0.4",
     "@socket.io/redis-adapter": "^7.1.0",
     "@tsed/agenda": "^6.62.3",
