--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "backend/functions/infra"]
+[submodule "backend/infra"]
 	path = backend/infra
 	url = https://github.com/Raheem-ai/raheem-infra.git
