--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -18,8 +18,8 @@
     ],
     "esModuleInterop": true,
     "paths": {
-      "common/*": ["../../common/*"],
-      "common": ["../../common/index.ts"]
+      "common/*": ["../common/*"],
+      "common": ["../common/index.ts"]
     }
   },
   "compileOnSave": true,
