--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -71,3 +71,12 @@ buck-out/
 web-build/
 
 # @end expo-cli
+
+# yarn workspace files
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
