--- a/frontend/package.json
+++ b/frontend/package.json
@@ -66,6 +66,7 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/uuid": "^8.3.1",
     "babel-plugin-module-resolver": "^4.1.0",
+    "expo-cli": "^5.0.3",
     "typescript": "~4.3.5"
   },
   "private": true,
