--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "expo-app-loading": "~1.2.1",
     "expo-constants": "~12.1.3",
     "expo-device": "~4.0.3",
+    "expo-linear-gradient": "~10.0.3",
     "expo-linking": "~2.4.2",
     "expo-location": "~13.0.4",
     "expo-notifications": "~0.13.3",
@@ -34,10 +35,12 @@
     "mobx-persist-store": "^1.0.3",
     "mobx-react": "^7.2.0",
     "module-alias": "^2.2.2",
+    "moment": "^2.29.1",
     "parse-full-name": "^1.2.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-calendar-picker": "^7.1.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-get-random-values": "~1.7.0",
     "react-native-maps": "0.28.1",
@@ -49,6 +52,7 @@
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "0.17.1",
+    "react-native-wheel-picker-expo": "^0.4.2",
     "react-router-dom": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "socket.io-client": "^4.4.0",
