--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
     "react-native-web": "0.17.1",
     "react-native-wheel-picker-expo": "^0.4.2",
     "react-router-dom": "^5.2.0",
+    "react-string-replace": "^1.1.0",
     "reflect-metadata": "^0.1.13",
     "socket.io-client": "^4.4.0",
     "stream-browserify": "^3.0.0",
