trying out app.config.js

--- a/frontend/app.old.json
+++ b/frontend/app.old.json
@@ -52,7 +52,7 @@
       "favicon": "./assets/favicon.png"
     },
     "extra": {
-      "devUrl": "https://d48a-24-44-149-184.ngrok.io"
+      "devUrl": "https://66c8-2601-3c1-c380-2680-1447-e337-549-d5d4.ngrok.io"
     }
   }
 }
