--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,19 +16,19 @@
     "buffer": "^6.0.3",
     "dotenv": "^16.0.1",
     "events": "^3.3.0",
-    "expo": "^43.0.0",
-    "expo-app-loading": "~1.2.1",
-    "expo-constants": "~12.1.3",
-    "expo-device": "~4.0.3",
-    "expo-linear-gradient": "~10.0.3",
-    "expo-linking": "~2.4.2",
-    "expo-location": "~13.0.4",
-    "expo-notifications": "~0.13.3",
-    "expo-secure-store": "~11.0.3",
-    "expo-splash-screen": "~0.13.5",
-    "expo-status-bar": "~1.1.0",
-    "expo-task-manager": "~10.0.3",
-    "expo-updates": "~0.10.15",
+    "expo": "^44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-constants": "~13.0.1",
+    "expo-device": "~4.1.0",
+    "expo-linear-gradient": "~11.0.3",
+    "expo-linking": "~3.0.0",
+    "expo-location": "~14.0.1",
+    "expo-notifications": "~0.14.0",
+    "expo-secure-store": "~11.1.0",
+    "expo-splash-screen": "~0.14.1",
+    "expo-status-bar": "~1.2.0",
+    "expo-task-manager": "~10.1.0",
+    "expo-updates": "~0.11.7",
     "inversify": "^5.1.1",
     "inversify-react": "^1.0.0",
     "lodash": "^4.17.21",
@@ -40,15 +40,15 @@
     "parse-full-name": "^1.2.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.2",
+    "react-native": "0.64.3",
     "react-native-calendar-picker": "^7.1.2",
-    "react-native-gesture-handler": "~1.10.2",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-get-random-values": "~1.7.0",
-    "react-native-maps": "0.28.1",
+    "react-native-maps": "0.29.4",
     "react-native-paper": "^4.9.2",
-    "react-native-reanimated": "~2.2.0",
+    "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.8.0",
+    "react-native-screens": "~3.10.1",
     "react-native-scroll-into-view": "^2.0.2",
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^8.1.0",
@@ -68,7 +68,7 @@
     "@types/google.maps": "^3.45.6",
     "@types/lodash": "^4.14.178",
     "@types/react": "~17.0.21",
-    "@types/react-native": "^0.64.19",
+    "@types/react-native": "~0.64.12",
     "@types/react-router-dom": "^5.1.8",
     "@types/uuid": "^8.3.1",
     "babel-plugin-module-resolver": "^4.1.0",
