--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,10 +1,12 @@
 {
   "scripts": {
-    "start": "react-native start",
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "dev": "expo start --no-https",
+    "dev:staging": "_ENVIRONMENT=staging expo start --no-https",
+    "dev:prod": "_ENVIRONMENT=prod expo start --no-https",
+    "build:prod:ios": "_ENVIRONMENT=prod expo build:ios --release-channel prod",
+    "build:staging:ios": "_ENVIRONMENT=staging expo build:ios --release-channel staging",
+    "build:prod:android": "_ENVIRONMENT=prod expo build:android -t app-bundle --release-channel prod",
+    "build:staging:android": "_ENVIRONMENT=staging expo build:android -t app-bundle --release-channel staging"
   },
   "dependencies": {
     "@googlemaps/google-maps-services-js": "3.1.16",
@@ -17,7 +19,6 @@
     "dotenv": "^16.0.1",
     "events": "^3.3.0",
     "expo": "^44.0.0",
-    "expo-app-loading": "~1.3.0",
     "expo-constants": "~13.0.1",
     "expo-device": "~4.1.0",
     "expo-linear-gradient": "~11.0.3",
