--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,30 @@
     "build:prod:ios": "_ENVIRONMENT=prod _PLATFORM=ios expo build:ios -t archive --release-channel prod",
     "build:staging:ios": "_ENVIRONMENT=staging _PLATFORM=ios expo build:ios -t archive --release-channel staging",
     "build:prod:android": "_ENVIRONMENT=prod _PLATFORM=android expo build:android -t app-bundle --release-channel prod",
-    "build:staging:android": "_ENVIRONMENT=staging _PLATFORM=android expo build:android -t app-bundle --release-channel staging"
+    "build:staging:android": "_ENVIRONMENT=staging _PLATFORM=android expo build:android -t app-bundle --release-channel staging",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/*.{js,jsx}",
+      "!**/coverage/**",
+      "!**/node_modules/**",
+      "!**/babel.config.js",
+      "!**/jest.setup.js"
+    ],
+    "coverageDirectory": "./tests/coverage",
+    "setupFiles": [
+      "./tests/setup.ts"
+    ],
+    "roots": [
+      ".",
+      "../common"
+    ]
   },
   "dependencies": {
     "@googlemaps/google-maps-services-js": "3.1.16",
@@ -32,6 +55,8 @@
     "expo-updates": "~0.13.4",
     "inversify": "^5.1.1",
     "inversify-react": "^1.0.0",
+    "jest": "^26.6.3",
+    "jest-expo": "^46.0.1",
     "lodash": "^4.17.21",
     "mobx": "^6.3.2",
     "mobx-persist-store": "^1.0.3",
@@ -65,8 +90,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.18.9",
     "@expo/ngrok": "^2.5.0",
+    "@testing-library/jest-native": "^4.0.11",
+    "@testing-library/react-native": "^11.0.0",
     "@types/google.maps": "^3.45.6",
+    "@types/jest": "^28.1.8",
     "@types/lodash": "^4.14.178",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.67.6",
@@ -74,6 +103,7 @@
     "@types/uuid": "^8.3.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "expo-cli": "^5.0.3",
+    "react-test-renderer": "17",
     "typescript": "~4.3.5"
   },
   "private": true,
