--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,9 @@
     "roots": [
       ".",
       "../common"
+    ],
+    "modulePaths": [
+      "<rootDir>/node_modules/"
     ]
   },
   "dependencies": {
@@ -84,6 +87,7 @@
     "react-string-replace": "^1.1.0",
     "reflect-metadata": "^0.1.13",
     "socket.io-client": "^4.4.0",
+    "socket.io-mock": "^1.3.2",
     "stream-browserify": "^3.0.0",
     "url": "^0.11.0",
     "uuid": "^8.3.2"
