--- a/backend/package.json
+++ b/backend/package.json
@@ -45,7 +45,9 @@
     "express": "^4.17.1",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
+    "form-data": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
+    "mailgun.js": "^8.0.1",
     "method-override": "^3.0.0",
     "module-alias": "^2.2.2",
     "mongoose": "^5.13.7",
