--- a/changelog.yaml
+++ b/changelog.yaml
@@ -20,9 +20,6 @@
   nativeIOSVersion: 1.0.2(1)
   nativeAndroidVersion: 1.0.2(13)
   commit: 99a2129
-  timestamp: '2023-08-28T21:16:13.278Z'
-  updates:
-    - >-
-      command to export org stats vs raw data + possible fix to the release
-      build job
+  timestamp: '2023-08-28T21:38:07.712Z'
+  updates: []
   nativeChanges: false
