--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,9 @@
     "dev:staging": "_DEV_ENVIRONMENT=staging expo start --dev-client",
     "dev:prod": "_DEV_ENVIRONMENT=prod expo start --dev-client",
     "build:prod": "_ENVIRONMENT=prod eas build --profile prod",
+    "build:prod:ci": "_ENVIRONMENT=prod eas build --profile prod --platform all --non-interactive --no-wait",
+    "build:preprod": "_ENVIRONMENT=preprod eas build --profile preprod",
+    "build:preprod:ci": "_ENVIRONMENT=preprod eas build --profile preprod --platform all --non-interactive --no-wait",
     "build:staging": "_ENVIRONMENT=staging eas build --profile staging",
     "build:staging-simulator": "_ENVIRONMENT=staging eas build --profile staging-simulator",
     "build:dev": "eas build --profile dev",
