[Release::Create] - 829eaf1

--- a/changelog.yaml
+++ b/changelog.yaml
@@ -48,3 +48,13 @@
   updates:
     - updating infra scripts
   nativeChanges: false
+- requiresUpdate: false
+  nativeIOSVersion: 1.0.4(1)
+  nativeAndroidVersion: 1.0.4(15)
+  commit: 829eaf1
+  timestamp: '2023-09-21T03:39:22.771Z'
+  updates:
+    - infra work separate preprod and prod fcm credentials
+    - Update invitation sent message
+    - Update strings.ts with logged out link to site
+  nativeChanges: true
